Updated the style and classes on emergency banner component to accomodate irunes backend updates. I also created a new 'cms-fixes' mixin which can be used throughout the site in order to limit the visibility of some common mistakes made by editors in the CMS (at the moment this only includes creating empty tags).

--- a/src/globals/css/_mixins.styl
+++ b/src/globals/css/_mixins.styl
@@ -26,6 +26,25 @@ real-list() {
   }
 }
 
+// A set of fixes intended to limit the visibility of mistakes the editor can make in the CMS
+cms-fixes() {
+  // If certain empty elements are added in the CMS. Simply don't show them.
+  p:empty,
+  a:empty,
+  ul:empty,
+  ol:empty,
+  table:empty,
+  h1:empty,
+  h2:empty,
+  h3:empty,
+  h4:empty,
+  h5:empty,
+  h6:empty,
+  li:empty {
+    display:none;
+  }
+}
+
 // For buttons!
 button(bgc) {
   display: inline-block;
